--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 server.port=7001
+
+spring.datasource.url=jdbc:mysql://localhost:3306/dataloaderportal
 spring.application.name = patientService
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/dataloaderportal?useSSL=false&allowPublicKeyRetrieval=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
 patient.files = files/
